# darkdropv4

./: .gitignore  ARCHITECTURE.md  CEREMONY.md  CONTRIBUTING.md  README.md  SECURITY.md
audits/: AUDIT-01-MANUAL-REVIEW.md  AUDIT-02-CODE-REVIEW.md  AUDIT-03-POST-FIX-REVIEW.md  AUDIT-04-POST-REVOKE.md  AUDIT-05-SCHEMA-V2-AND-POOL-DEPOSIT.md  OBSERVER-RESPONSE-2026-05-04.md  README.md
ceremony/: .gitignore  CONTRIBUTING.md  README.md  RFC-ISSUE-DRAFT.md  state.json
circuits/: darkdrop.circom  note_pool.circom  package.json
program/: Anchor.toml
program/programs/darkdrop/: Cargo.toml
program/programs/darkdrop/src/: errors.rs  lib.rs  merkle_tree.rs  poseidon.rs  state.rs  verifier.rs  vk.rs
program/programs/darkdrop/src/instructions/: admin_sweep.rs  authority_rotation.rs  claim.rs  claim_credit.rs  claim_from_note_pool.rs  close_receipt.rs  create_drop.rs  create_drop_to_pool.rs  create_treasury.rs  deposit_to_note_pool.rs  initialize.rs  initialize_note_pool.rs  migrate_schema_v2.rs  migrate_vault.rs  mod.rs  revoke_drop.rs  withdraw_credit.rs
relayer/: package.json
scripts/: ceremony.sh  close-receipt-test.js  dump-account-sizes.js  e2e-credit-test.js  e2e-pool-deposit-test.js  e2e-test.js  export_vk_rust.js  generate-audit-pdfs.js  generate_zero_hashes.js  legacy-create-drop-test.js  migrate-schema-v2.js  migrate-vault-v2.js  migration-baseline.json  note-pool-security-tests.js  note-pool-test.js  package.json  relayer-test.js  revoke-crossimpl-test.js  revoke-test.js  security-credit-tests.js  security-revoke-tests.js  security-tests.js  stress-test.js  (+1 more)
(+47 files in other folders)
