[package]
name = "darkdrop"
version = "0.1.0"
description = "DarkDrop V4 — Privacy-first value transfer on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darkdrop"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
groth16-solana = "0.0.3"
light-hasher = "4.0.0"
